Update Eli's bio and add photo

--- a/about.html
+++ b/about.html
@@ -145,11 +145,10 @@
     <h2>Team</h2>
     <div class="team">
         <div class="member">
-            <img src="photos/eli.jpg" alt="Eli" />
-            <h3>Eli</h3>
+            <img src="photos/eli.jpg" alt="Eli Goldberger" />
+            <h3>Eli Goldberger</h3>
             <p class="role">Backend / API</p>
-            <p class="bio">Computer Science student at University of St. Thomas. Built the REST API connection, data
-                fetching, and new incident submission form.</p>
+            <p class="bio">Computer Science major who likes turning ideas into working tools fast. Hands-on developer with experience in backend integrations, APIs, and building practical tools.</p>
         </div>
         <div class="member">
             <img src="photos/caiden.jpg" alt="Caiden" />
