Added bio image

--- a/about.html
+++ b/about.html
@@ -161,7 +161,7 @@
             <img src="photos/charlotte.jpg" alt="Charlotte" />
             <h3>Charlotte</h3>
             <p class="role">Map Features</p>
-            <p class="bio">Computer Science student at University of St. Thomas. Implemented neighborhood markers and
+            <p class="bio">Computer Science major at University of St. Thomas. Implemented neighborhood markers and
                 address search functionality.</p>
         </div>
     </div>
